--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
   "require": {
     "php": ">=8.1.0",
     "ext-json": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "yuanzhihai\\enum\\think\\": "src/"
+    }
   }
 }
